src/objects/Papyrus_Document__c.object
<CustomObject>
    <description>This object holds the reference links to Papyrus scanned documents, which are stored in GCP. This object can be retired once all the Papyrus functionality is moved to current Germany model where the documents will be stored in SF.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Papyrus Documents</relationshipLabel>
        <relationshipName>Papyrus_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Document_Created_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Created By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Document Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <description>Reference to the Google document link</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Document__c</fullName>
        <formula>IF($Organization.Id = &apos;00D0Q0000008avs&apos;, HYPERLINK($CustomMetadata.Salesforce_Environment_Setting__mdt.Production.Papyrus_URL__c + &apos;?id=&apos; + Document_Link__c , &quot;View Document&quot;, &quot;_blank&quot;), HYPERLINK($CustomMetadata.Salesforce_Environment_Setting__mdt.Sandbox.Papyrus_URL__c + &apos;?id=&apos; + Document_Link__c , &quot;View Document&quot;, &quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Document</label>
        <type>Text</type>
    </fields>
    <label>Papyrus Document</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Papyrus Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>